@@ -1,0 +1,92 @@
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
+#
+#   http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied.  See the License for the
+# specific language governing permissions and limitations
+# under the License.
+
+version: 2.1
+
+jobs:
+  cassandra-analytics-core-spark2-2_11-jdk8:
+    docker:
+      - image: cimg/openjdk:8.0
+    steps:
+      - checkout
+      - run:
+          name: Build and test against Spark 2 Scala 2.11 JDK8
+          command: |
+            git clone --single-branch --branch trunk https://github.com/apache/cassandra-sidecar.git
+            ./cassandra-sidecar/gradlew --project-dir=./cassandra-sidecar -Pversion=1.0.0-jdk8-local :vertx-client-shaded:publishToMavenLocal
+            ./gradlew --stacktrace clean assemble check
+          environment:
+            SPARK_VERSION: "2"
+            SCALA_VERSION: "2.11"
+            JDK_VERSION: "1.8"
+
+  cassandra-analytics-core-spark2-2_12-jdk8:
+    docker:
+      - image: cimg/openjdk:8.0
+    steps:
+      - checkout
+      - run:
+          name: Build and test against Spark 2 Scala 2.12 JDK8
+          command: |
+            git clone --single-branch --branch trunk https://github.com/apache/cassandra-sidecar.git
+            ./cassandra-sidecar/gradlew --project-dir=./cassandra-sidecar -Pversion=1.0.0-jdk8-local :vertx-client-shaded:publishToMavenLocal
+            ./gradlew --stacktrace clean assemble check
+          environment:
+            SPARK_VERSION: "2"
+            SCALA_VERSION: "2.12"
+            JDK_VERSION: "1.8"
+
+  cassandra-analytics-core-spark3-2_12-jdk11:
+    docker:
+      - image: cimg/openjdk:11.0
+    steps:
+      - checkout
+      - run:
+          name: Build and test against Spark 3 Scala 2.12 JDK11
+          command: |
+            git clone --single-branch --branch trunk https://github.com/apache/cassandra-sidecar.git
+            ./cassandra-sidecar/gradlew --project-dir=./cassandra-sidecar -Pversion=1.0.0-local :vertx-client-shaded:publishToMavenLocal
+            ./gradlew --stacktrace clean assemble check
+          environment:
+            SPARK_VERSION: "3"
+            SCALA_VERSION: "2.12"
+            JDK_VERSION: "11"
+
+  cassandra-analytics-core-spark3-2_13-jdk11:
+    docker:
+      - image: cimg/openjdk:11.0
+    steps:
+      - checkout
+      - run:
+          name: Build and test against Spark 3 Scala 2.13 JDK11
+          command: |
+            git clone --single-branch --branch trunk https://github.com/apache/cassandra-sidecar.git
+            ./cassandra-sidecar/gradlew --project-dir=./cassandra-sidecar -Pversion=1.0.0-local :vertx-client-shaded:publishToMavenLocal
+            ./gradlew --stacktrace clean assemble check
+          environment:
+            SPARK_VERSION: "3"
+            SCALA_VERSION: "2.13"
+            JDK_VERSION: "11"
+
+workflows:
+  version: 2
+  build-and-test:
+    jobs:
+      - cassandra-analytics-core-spark2-2_11-jdk8
+      - cassandra-analytics-core-spark2-2_12-jdk8
+      - cassandra-analytics-core-spark3-2_12-jdk11
+      - cassandra-analytics-core-spark3-2_13-jdk11
