@@ -95,6 +95,7 @@ subprojects {
   }
 
   repositories {
+    mavenCentral()
     // uncomment the line below for local development
     mavenLocal()
   }
